[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/TextBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/GameplayUI.gd" type="Script" id=2]
[ext_resource path="res://ui/Inventory.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextBox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "inventor_slide_in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Inventory:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 540.0, 340.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "inventor_slide_out"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Inventory:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 340.0, 540.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "text_appear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("TextBox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "text_disappear"
tracks/0/type = "value"
tracks/0/path = NodePath("TextBox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="GameplayUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TextBox" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -15.0
margin_right = 300.0
margin_bottom = 15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/inventor_slide_in = SubResource( 4 )
anims/inventor_slide_out = SubResource( 5 )
anims/text_appear = SubResource( 6 )
anims/text_disappear = SubResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0

[node name="SelectedItemTexture" type="TextureRect" parent="TextureRect"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0

[node name="Inventory" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -249.5
margin_right = 249.5
margin_bottom = 200.0

[connection signal="item_selected" from="Inventory" to="." method="_on_Inventory_item_selected"]
[connection signal="open_toggled" from="Inventory" to="." method="_on_Inventory_open_toggled"]
